--- a/about.html
+++ b/about.html
@@ -234,7 +234,7 @@ window.__mirage2 = {petok:"lDUAOdplYdruVQxZj7XRJuLrXUMn19HAOgr1TOsupBA-1800-0"};
 <li><a href="./blog-details.html">Woodbridge VA</a></li>
 </ul>
 </li>
-<!--<li><a href="./fleet.html">Our Fleet</a></li>-->
+<li><a href="./fleet.html">Our Fleet</a></li>
 <li><a href="./career.html">Career</a></li>
 <li><a href="./contact.html">Booking</a></li>
 <!--<li><a href="#">Brochure</a></li>-->
