--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 <li><a href="./blog-details.html">Woodbridge VA</a></li>
 </ul>
 </li>
-<!--<li><a href="./fleet.html">Our Fleet</a></li>-->
+<li><a href="./fleet.html">Our Fleet</a></li>
 <li><a href="./career.html">Career</a></li>
 <li><a href="./contact.html">Booking</a></li>
 <!--<li><a href="#">Brochure</a></li>-->
@@ -291,8 +291,8 @@
 <div class="row">
 <div class="col-lg-6">
 <div class="hero__text">
-<span class="hero__label">Bright Star</span>
-<h2>Fast and Reliable Ambulance Transportation</h2>
+<span class="hero__label">Bright Star Non Medical Transportation</span>
+<h2>Fast and Reliable Transportation</h2>
 <a href="/services.html" class="primary-btn"><span>View services</span></a>
 </div>
 </div>
