--- a/discount.html
+++ b/discount.html
@@ -224,7 +224,7 @@
 <li><a href="./blog-details.html">Woodbridge VA</a></li>
 </ul>
 </li>
-<!--<li><a href="./fleet.html">Our Fleet</a></li>-->
+<li><a href="./fleet.html">Our Fleet</a></li>
 <li><a href="./career.html">Career</a></li>
 <li><a href="./contact.html">Booking</a></li>
 <!--<li><a href="#">Brochure</a></li>-->
